--- a/parcel.serve.html
+++ b/parcel.serve.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <script defer src="./bundled/index.js"></script>
+  </head>
   <body>
-    <div id="app" /></div>
-    <script src="./bundled/index.js"></script>
+    <div id="app"></div>
   </body>
 </html>
